Grammar and spelling

--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -3,7 +3,7 @@
     <div class="ui container">
         <h3 class="ui header">Skills</h3>
         <p>
-            In this section I'll present to you my skill set. Most of the items described here will have related projects that will be found on the bottom of the card describing the skill. You can hover the different projects to see the stack used for each one.
+            In this section, I'll present to you my skill set. Most of the items described here, will have related projects that can be found on the bottom of the card describing the skill. You can hover over the different projects to see the stack used for each one.
         </p>
         <div class="ui two column stackable grid">
             <div class="column">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            I mainly use Javascript on the front side, and it's only because I have to. I did only one node.js project.
+                            I mainly use Javascript on the front end, by necessity, only. I have only one node.js project.
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
@@ -189,7 +189,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            I'm currently working on my Archlinux laptop. It's been four years since I installed Arch and everything works fine (even though my root partition is currently full because of Docker). One of my raspberry also runs Arch and acts like a server for some
+                            I'm currently working on my Archlinux laptop. It's been four years since I have installed Arch, and everything works fine (although, my root partition is currently full, thanks to Docker). One of my Raspberry Pis also runs Arch, and acts like a server for some
                             of my IRC bots.
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            Most of my servers are running Debian (2 Scaleways, 1 OVH), I admnistrate those on a daily basis.
+                            Most of my servers are running Debian (2 Scaleways, 1 OVH), I administer those on a daily basis.
                         </div>
                     </div>
                     <div class="ui fluid card">
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            Performance oriented HTTP web framework for the Go language. I switched from Goji to Gin because of the ease of use and performance improvments.
+                            Performance oriented HTTP web framework for the Go language. I switched from Goji to Gin, because of ease of use and performance improvements.
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
@@ -373,7 +373,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            I use Ansible on a daily basis to deploy my projects. Also used it in a professional environment to automate the servers provisionning.
+                            I use Ansible on a daily basis to deploy my projects. I also use it in a professional environment to automate the provisioning of servers.
                         </div>
                     </div>
                     <div class="ui fluid card">
@@ -386,7 +386,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            That docker based continuous integrator is perfect. I also use that daily to automate my builds and automate the production cycle.
+                            That docker based continuous integrator is perfect. I also use that daily, to automate my builds and automate the production cycle.
                         </div>
                     </div>
                     <div class="ui fluid card">
