Fix spelling: Personnalité / Personell => Personality / Personal

--- a/templates/projects.tmpl
+++ b/templates/projects.tmpl
@@ -3,7 +3,7 @@
     <div class="ui container">
         <h3 class="ui header">Projects</h3>
         <p>
-            In this section I'll present to you some of my personnal projects. The data displayed here are automatically fetched using the API of my <a href="https://monit.depado.eu" target="_blank">monitoring service</a>. If you wish to get more information
+            In this section I'll present to you some of my personal projects. The data displayed here are automatically fetched using the API of my <a href="https://monit.depado.eu" target="_blank">monitoring service</a>. If you wish to get more information
             on these projects you can either check the website, the github repository or the monitoring service which holds more data (commit history, build history, response time…)
         </p>
         <p>
