Finaly updating things

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -116,7 +116,7 @@
     </p>
     <p>
         That's the way things work. Some people will definitely make some money with your sources, at one point. Either they'll just copy part of your code, or import a lib you made… It's up to you to choose a license you like. Some licenses force users to do
-        open-source if they use your lib/soft. Personnaly I don't care. If my work can help other people, then fine.
+        open-source if they use your lib/soft. Personally I don't care. If my work can help other people, then fine.
     </p>
     <p>
         What I'm about to say will piss some people off : I don't really care about licenses on my own projects. I don't want to force people to adopt my point of view about the open-source, I don't want them to feel bad about using a snippet they found in my
@@ -127,7 +127,7 @@
     </p>
     <h3 id="linux">Linux</h3>
     <p>
-        I'm a Linux user, I administrate Linux servers. I honnestly don't see how people can even develop on Windows. As I have no experience with Mac, I won't speak about it here.
+        I'm a Linux user, I administrate Linux servers. I honestly don't see how people can even develop on Windows. As I have no experience with Mac, I won't speak about it here.
     </p>
     <p>
         Like everything else described in this document it's all about my personal point of view. I'm sure there are very good devs working on Windows environments. What I'm also sure is that a very good dev working on a Windows environment would be an excellent
@@ -138,7 +138,7 @@
         think the lack of love for eye-candy things in the Linux community is what makes it so “nerd”.
     </p>
     <p>
-        I'm running Archlinux. It's been four years that Arch is on my machine, I never resintalled it, not even once. There is always a solution, a good solution, to any one of your problem. It forces you to learn things and to understand how things work under
+        I'm running Archlinux. It's been four years that Arch is on my machine, I never reinstalled it, not even once. There is always a solution, a good solution, to any one of your problem. It forces you to learn things and to understand how things work under
         the hood.
     </p>
     <h3 id="troll">Troll</h3>
