--- a/templates/experience.tmpl
+++ b/templates/experience.tmpl
@@ -23,6 +23,10 @@
                             </div>
                             <div class="extra">
                                 <div class="ui labels">
+                                    <span class="ui label">GCP</span>
+                                    <span class="ui label">Kubernetes</span>
+                                    <span class="ui label">Helm</span>
+                                    <span class="ui label">Drone CI</span>
                                     <span class="ui label">AWS</span>
                                     <span class="ui label">AWS Lambda</span>
                                     <span class="ui label">ElasticSearch</span>
