--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -3,7 +3,8 @@
     <div class="ui container">
         <h3 class="ui header">Skills</h3>
         <p>
-            In this section, I'll present to you my skill set. Most of the items described here, will have related projects that can be found on the bottom of the card describing the skill. You can hover over the different projects to see the stack used for each one.
+            In this section, I'll present to you my skill set. Most of the items described here will have related projects that can be found on the bottom of the card. 
+            You can hover over the different projects to see the stack used for each one.
         </p>
         <div class="ui two column stackable grid">
             <div class="column">
@@ -20,20 +21,25 @@
                                 </div>
                             </div>
                             <div class="meta">
-                                Versions : 1.3 to 1.6+
+                                Versions : Always the latest ♥
                             </div>
                         </div>
                         <div class="extra content">
-                            Go is language I'm currently in love with. It is efficient, compiles to native binaries and has a really interesting concurrency model.
+                            Go is the language I'm currently in love with. 
+                            It is efficient, has a nice concurrency model, and is easy to deploy and play with.
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
                                 <a class="ui label with-popup" href="https://github.com/Depado/goploader" target="_blank" data-content="Go, Gin, BoltDB">Goploader</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/gomonit" target="_blank" data-content="Go, Gin">Gomonit</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/ginprom" target="_blank" data-content="Go, Gin, Prometheus">Ginprom</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/bfchroma" target="_blank" data-content="Go">bfchroma</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/conftags" target="_blank" data-content="Go">conftags</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/smallblog" target="_blank" data-content="Go, Gin">smallblog</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/ircblinker" target="_blank" data-content="Go">ircblinker</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/go-b0tsec" target="_blank" data-content="Go, BoltDB">go-b0tsec</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/portfolio" target="_blank" data-content="Go, Gin">Portfolio</a>
-                                <a class="ui label with-popup" href="https://github.com/Depado/portfolio.v2" target="_blank" data-content="Go, Gin">Portfolio.V2</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/portfolio.v2" target="_blank" data-content="Go, Gin">Portfolio.v2</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/jagon-api" target="_blank" data-content="Go, Gin">Jagon-API</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/govue" target="_blank" data-content="Go, Gin, Vue.js, BoltDB">GoVue</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/gofip" target="_blank" data-content="Go">GoFIP</a>
@@ -52,11 +58,12 @@
                                 </div>
                             </div>
                             <div class="meta">
-                                Versions : 2.7 or 3.5+
+                                Versions : 2.7 or 3.6+
                             </div>
                         </div>
                         <div class="extra content">
-                            Python is the language I worked the most with. I mainly work with the 3.x version (currently 3.5.2).
+                            I mainly worked with the 3.x version, and played
+                            a lot with Flask and Django.
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
@@ -155,7 +162,8 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            Object-relational database management system with an emphasis on extensibility and standards-compliance. Mainly used in a professional environment.
+                            Object-relational database management system with an emphasis on extensibility and standards-compliance. 
+                            Mainly used in a professional environment.
                         </div>
                     </div>
                     <div class="ui fluid card">
@@ -189,8 +197,8 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            I'm currently working on my Archlinux laptop. It's been four years since I have installed Arch, and everything works fine (although, my root partition is currently full, thanks to Docker). One of my Raspberry Pis also runs Arch, and acts like a server for some
-                            of my IRC bots.
+                            I'm currently working on my Archlinux laptop. It's been four years since I have installed Arch, and everything works fine (although, my root partition is currently full, thanks to Docker). 
+                            One of my Raspberry Pis also runs Arch, and acts like a server for some of my IRC bots.
                         </div>
                     </div>
                     <div class="ui fluid card">
@@ -203,7 +211,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            Most of my servers are running Debian (2 Scaleways, 1 OVH), I administer those on a daily basis.
+                            Most of my servers are running Debian.
                         </div>
                     </div>
                     <div class="ui fluid card">
@@ -238,12 +246,15 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            Performance oriented HTTP web framework for the Go language. I switched from Goji to Gin, because of ease of use and performance improvements.
+                            Performance oriented HTTP web framework for the Go language.
+                            I'm mostly using Gin for all my projects, it's really easy to work with and removes a lot of boilerplate
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
                                 <a class="ui label with-popup" href="https://github.com/Depado/goploader" target="_blank" data-content="Go, Gin, BoltDB">Goploader</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/ginprom" target="_blank" data-content="Go, Gin, Prometheus">Ginprom</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/gomonit" target="_blank" data-content="Go, Gin">Gomonit</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/smallblog" target="_blank" data-content="Go, Gin">smallblog</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/portfolio" target="_blank" data-content="Go, Gin">Portfolio</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/portfolio.v2" target="_blank" data-content="Go, Gin">Portfolio.V2</a>
                                 <a class="ui label with-popup" href="https://github.com/Depado/jagon-api" target="_blank" data-content="Go, Gin">Jagon-API</a>
@@ -399,7 +410,8 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            I used nginx before using Caddy and I keep using it because Caddy lacks some of nginx's features (caching, wildcards).
+                            I used nginx before using Caddy. It works fine.
+                            But Caddy's still better.
                         </div>
                     </div>
                     <div class="ui fluid card">
