--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -75,13 +75,18 @@
             <div class="ui container">
                 <h3 class="ui header">About me</h3>
                 <p>
-                    My name is Paul Lhussiez and I'm a 23 years old passionate developer. People usually call me Depado. It's my nickname quite everywhere on internet.
+                    My name is Paul Lhussiez and I'm a 25 years old passionate developer. 
+                    People usually call me Depado. It's my nickname quite everywhere on internet.
                 </p>
                 <p>
-                    I currently live in Paris and I'm working for Leboncoin's Lab. In this website you'll find some information about me, such as my projects, experience, skills… If you wish to learn more about my personality, you can head to <a href="/about">this page</a>.
+                    I currently live in Paris and I'm working for Leboncoin's Lab. 
+                    On this website you'll find some information about me, such as my projects, experience, skills… 
+                    If you wish to learn more about my personality, you can head to <a href="/about">this page</a>.
                 </p>
                 <p>
-                    I'm mostly interested in the Go programming language for the backend side. I'm polyvalent, I can administrate servers, automate deployments, and I enjoy working with a cloud provider such as Outscale and Scaleway. I love APIs ! ♥
+                    I'm mostly interested in the Go programming language for the backend side. 
+                    But I'm not just a backend developer, I'm also interested in infrastructure and devops. 
+                    I'm currently in love with Kubernetes and Helm. 
                 </p>
             </div>
         </div>
