--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -9,7 +9,7 @@
     <link rel="icon" href="/static/img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -45,28 +45,31 @@
                 <h2>Paul Lhussiez<br />Developer, Geek, New Technologies Enthusiast</h2>
                 <br />
                 <a href="https://github.com/Depado" target="_blank" data-content="Github" class="with-popup">
-                    <i class="white fa fa-2x fa-github"></i>
+                    <i class="white fab fa-github fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="http://stackoverflow.com/users/1343321/depado" target="_blank" data-content="StackOverflow" class="with-popup">
-                    <i class="white fa fa-stack-overflow fa-2x"></i>
+                    <i class="white fab fa-stack-overflow fa-2x"></i>
+                </a>&nbsp;&nbsp;
+                <a href="https://stackoverflow.com/story/depado" target="_blank" data-content="Dev Story" class="with-popup">
+                    <i class="white fa fa-newspaper fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="https://plus.google.com/u/0/114932755645700075856" target="_blank" data-content="Google+" class="with-popup">
-                    <i class="white fa fa-google-plus-square fa-2x"></i>
+                    <i class="white fab fa-google-plus fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="http://blog.depado.eu" target="_blank" data-content="Blog" class="with-popup">
-                    <i class="white fa fa-file-text fa-2x"></i>
+                    <i class="white fas fa-file-alt fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="https://twitter.com/Depado_" target="_blank" data-content="Twitter" class="with-popup">
-                    <i class="white fa fa-twitter fa-2x"></i>
+                    <i class="white fab fa-twitter fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="https://soundcloud.com/depado" target="_blank" data-content="Soundcloud" class="with-popup">
-                    <i class="white fa fa-soundcloud fa-2x"></i>
+                    <i class="white fab fa-soundcloud fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="https://fr.linkedin.com/in/paul-lhussiez-7b55664a" target="_blank" data-content="LinkedIn" class="with-popup">
-                    <i class="white fa fa-linkedin fa-2x"></i>
+                    <i class="white fab fa-linkedin fa-2x"></i>
                 </a>&nbsp;&nbsp;
                 <a href="mailto:paul.lhussiez@gmail.com" data-content="Mail" class="with-popup">
-                    <i class="white fa fa-envelope fa-2x"></i>
+                    <i class="white fas fa-envelope fa-2x"></i>
                 </a>&nbsp;&nbsp;
             </div>
         </div>
